more git ignoring
blahblahb

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@
 .minecraft/mods/TheBetweenlands-3.9.5-universal.jar
 .minecraft/mods
 .minecraft/.mcdj
+instance.cfg
+/.minecraft/llibrary/debug
+/natives
+instance.cfg
+.minecraft/crafttweaker.log
+.minecraft/config/splash.properties
+.minecraft/.ReAuth.cfg
+instance.cfg
