--- a/.minecraft/config/infernalmobs.cfg
+++ b/.minecraft/config/infernalmobs.cfg
@@ -906,17 +906,39 @@ general {
     B:"MM_Weakness enabled"=true
     B:"MM_Webber enabled"=true
     B:"MM_Wither enabled"=true
+
+    # List of DimensionIDs where InfernalMobs will NEVER spawn
     S:dimensionIDBlackList=
+
+    # Disables the ingame Health and Name overlay
     B:disableGUIoverlay=false
+
+    # List of equally likely to drop Items for Elites, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsElite=diamond,iron_ingot-0-5,gold_ingot-0-5,emerald-0-2,iceandfire:manuscript-0-3,grimoireofgaia:box_old,grimoireofgaia:box,grimoireofgaia:box_gold,grimoireofgaia:box_iron,cookie-0-6
+
+    # List of equally likely to drop Items for Infernals, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsInfernal=diamond-0-3,iron_ingot-0-8,gold_ingot-0-8,emerald-0-5,iceandfire:manuscript-0-6,grimoireofgaia:box_old,grimoireofgaia:box,grimoireofgaia:box_gold,grimoireofgaia:box_iron,cookie-0-16,scalinghealth:crystalshard,grimoireofgaia:chest,grimoireofgaia:chest-1,grimoireofgaia:chest-2,grimoireofgaia:ender_pearl,enchanted_book
+
+    # List of equally likely to drop Items for Ultras, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsUltra=bow,diamond-0-3,bountifulbaubles:amuletsinempty,bountifulbaubles:trinketluckyhorseshoe,bountifulbaubles:trinketbezoar,bountifulbaubles:trinketvitamins,bountifulbaubles:trinketballoon,bountifulbaubles:trinketapple,bountifulbaubles:shieldcobalt,bountifulbaubles:trinketobsidianskull,bountifulbaubles:trinketmagiclenses,artifacts:feral_claws,artifacts:magma_stone,artifacts:bottled_cloud,artifacts:whoopie_cushion,artifacts:panic_necklace,artifacts:thorn_pendant,artifacts:flame_pendant,artifacts:shock_pendant,bountifulbaubles:amuletcross,artifacts:lucky_clover,artifacts:sacrificial_amulet,artifacts:bubble_wrap,artifacts:antidote_vessel,artifacts:pocket_piston,artifacts:star_cloak,artifacts:drinking_hat,scalinghealth:crystalshard,ender_pearl,enchanted_book
+
+    # One in THIS many Mobs will become atleast rare
     I:eliteRarity=15
+
+    # One in THIS many already ultra Mobs will become infernal
     I:infernoRarity=7
+
+    # highest amount of damage an Infernal Mob or reflecting Mod will do in a single strike
     D:maxOneShotDamage=10.0
     D:mobFarmDamageThreshold=150.0
+
+    # Multiplier applied ontop of all of the modified Mobs health
     S:mobHealthFactor=1.0
+
+    # One in THIS many already rare Mobs will become atleast ultra
     I:ultraRarity=7
+
+    # Use Entity class names instead of ingame Entity names for the config
     B:useSimpleEntityClassnames=true
 }
 
