--- a/instance.cfg
+++ b/instance.cfg
@@ -18,7 +18,7 @@ OverrideCommands=false
 OverrideConsole=false
 OverrideGameTime=false
 OverrideJavaArgs=false
-OverrideJavaLocation=false
+OverrideJavaLocation=true
 OverrideMCLaunchMethod=false
 OverrideMemory=false
 OverrideMiscellaneous=false
@@ -26,23 +26,54 @@ OverrideNativeWorkarounds=false
 OverridePerformance=false
 OverrideWindow=false
 UseAccountForInstance=false
-lastLaunchTime=1724531612976
+lastLaunchTime=1724539076989
 linkedInstances=[]
 notes=
-JavaVersion=1.8.0_51
+JavaVersion=1.8.0_331
 ConfigVersion=1.2
 ExportAuthor=
 ExportName=
 ExportOptionalFiles=true
 ExportSummary=
 ExportVersion=1.0.0
-JavaSignature=c34961e18815d39726b324062771143bef890296
+JavaSignature=ee0fa7f58f42e80ea93d83b3742cab272aa17659
 OverrideEnv=false
-JavaVendor="Azul Systems, Inc."
+JavaVendor=Oracle Corporation
 OverrideLegacySettings=false
 Profiler=
-lastTimePlayed=1707
-totalTimePlayed=5977
+lastTimePlayed=168
+totalTimePlayed=6146
+AutoCloseConsole=false
+CloseAfterLaunch=false
+CustomGLFWPath=
+CustomOpenALPath=
+EnableFeralGamemode=false
+EnableMangoHud=false
+Env=@Variant(\0\0\0\b\0\0\0\0)
+IgnoreJavaCompatibility=false
+InstanceAccountId=
+JavaPath=C:/Program Files/Java/jre1.8.0_331/bin/javaw.exe
+JoinServerOnLaunchAddress=
+JvmArgs=
+LaunchMaximized=true
+MaxMemAlloc=8192
+MinMemAlloc=512
+MinecraftWinHeight=480
+MinecraftWinWidth=854
+OnlineFixes=false
+OverrideJava=false
+PermGen=128
+PostExitCommand=
+PreLaunchCommand=
+QuitAfterGameStop=false
+RecordGameTime=true
+ShowConsole=false
+ShowConsoleOnError=true
+ShowGameTime=true
+UseDiscreteGpu=false
+UseNativeGLFW=false
+UseNativeOpenAL=false
+WrapperCommand=
 
 [UI]
 mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3(\0\0\0\x6\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x34\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
