--- a/instance.cfg
+++ b/instance.cfg
@@ -26,25 +26,23 @@ OverrideNativeWorkarounds=false
 OverridePerformance=false
 OverrideWindow=false
 UseAccountForInstance=false
-lastLaunchTime=1724545903849
+lastLaunchTime=1724541167774
 linkedInstances=[]
 notes=
-JavaVersion=1.8.0_331
+JavaVersion=1.8.0_321
 ConfigVersion=1.2
 ExportAuthor=
 ExportName=
 ExportOptionalFiles=true
 ExportSummary=
 ExportVersion=1.0.0
-JavaSignature=ee0fa7f58f42e80ea93d83b3742cab272aa17659
+JavaSignature=206831965ede74336211e1800e6547e934274878
 OverrideEnv=false
 JavaVendor=Oracle Corporation
 OverrideLegacySettings=false
 Profiler=
-lastTimePlayed=156
-totalTimePlayed=7406
-IgnoreJavaCompatibility=false
-JavaPath=C:/Program Files/Java/jre1.8.0_331/bin/javaw.exe
+lastTimePlayed=1043
+totalTimePlayed=8700
 AutoCloseConsole=false
 CloseAfterLaunch=false
 CustomGLFWPath=
@@ -52,11 +50,13 @@ CustomOpenALPath=
 EnableFeralGamemode=false
 EnableMangoHud=false
 Env=@Variant(\0\0\0\b\0\0\0\0)
+IgnoreJavaCompatibility=false
 InstanceAccountId=
+JavaPath=C:/Program Files/Java/jre1.8.0_321/bin/javaw.exe
 JoinServerOnLaunchAddress=
 JvmArgs=
-LaunchMaximized=true
-MaxMemAlloc=8192
+LaunchMaximized=false
+MaxMemAlloc=4096
 MinMemAlloc=512
 MinecraftWinHeight=480
 MinecraftWinWidth=854
@@ -74,6 +74,8 @@ UseDiscreteGpu=false
 UseNativeGLFW=false
 UseNativeOpenAL=false
 WrapperCommand=
+DisableQuiltBeacon=false
+OverrideModLoaderSettings=false
 
 [UI]
-mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3\x17\0\0\0\x6\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1#\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
+mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3(\0\0\0\x6\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x34\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
