--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -120,15 +120,14 @@ world-1460707195 {
 
 
 world-1519165611 {
-    # Show the list of bookmarks next to open GUIs.
-    B:bookmarkOverlayEnabled=true
+    B:bookmarkOverlayEnabled=false
 
     # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=
+    S:filterText=@treasure 
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
