push actual changes
some slight tweaks to gitignore and stuff

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ instance.cfg
 instance.cfg
 .minecraft/usercache.json
 .minecraft/usernamecache.json
+.minecraft/usercache.json
+.minecraft/usercache.json
+.minecraft/config/ichunutil.cfg
