--- a/instance.cfg
+++ b/instance.cfg
@@ -24,25 +24,30 @@ OverrideMemory=false
 OverrideMiscellaneous=false
 OverrideNativeWorkarounds=false
 OverridePerformance=false
-OverrideWindow=false
+OverrideWindow=true
 UseAccountForInstance=false
-lastLaunchTime=1724541167774
+lastLaunchTime=1724548372730
 linkedInstances=[]
 notes=
-JavaVersion=1.8.0_321
+JavaVersion=1.8.0_331
 ConfigVersion=1.2
 ExportAuthor=
 ExportName=
 ExportOptionalFiles=true
 ExportSummary=
 ExportVersion=1.0.0
-JavaSignature=206831965ede74336211e1800e6547e934274878
+JavaSignature=ee0fa7f58f42e80ea93d83b3742cab272aa17659
 OverrideEnv=false
 JavaVendor=Oracle Corporation
 OverrideLegacySettings=false
 Profiler=
-lastTimePlayed=1043
-totalTimePlayed=8700
+lastTimePlayed=633
+totalTimePlayed=10247
+IgnoreJavaCompatibility=false
+JavaPath=C:/Program Files/Java/jre1.8.0_331/bin/javaw.exe
+LaunchMaximized=false
+MinecraftWinHeight=512
+MinecraftWinWidth=512
 AutoCloseConsole=false
 CloseAfterLaunch=false
 CustomGLFWPath=
@@ -50,16 +55,11 @@ CustomOpenALPath=
 EnableFeralGamemode=false
 EnableMangoHud=false
 Env=@Variant(\0\0\0\b\0\0\0\0)
-IgnoreJavaCompatibility=false
 InstanceAccountId=
-JavaPath=C:/Program Files/Java/jre1.8.0_321/bin/javaw.exe
 JoinServerOnLaunchAddress=
 JvmArgs=
-LaunchMaximized=false
-MaxMemAlloc=4096
+MaxMemAlloc=8192
 MinMemAlloc=512
-MinecraftWinHeight=480
-MinecraftWinWidth=854
 OnlineFixes=false
 OverrideJava=false
 PermGen=128
@@ -74,8 +74,7 @@ UseDiscreteGpu=false
 UseNativeGLFW=false
 UseNativeOpenAL=false
 WrapperCommand=
-DisableQuiltBeacon=false
-OverrideModLoaderSettings=false
 
 [UI]
-mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x3(\0\0\0\x6\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x1\x34\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
+mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x4L\0\0\0\x6\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x2X\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
+shaderpacks_Page\Columns="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1,\0\0\0\x3\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x3\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)"
