--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -1095,10 +1095,17 @@ world1969693092 {
 
 
 world2032161 {
+    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=aerclou
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -1491,6 +1498,15 @@ world62997093 {
 
 
 world62997112 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world650579111 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
     B:editEnabled=false
