--- a/.minecraft/config/worldedit/worldedit.properties
+++ b/.minecraft/config/worldedit/worldedit.properties
@@ -1,9 +1,5 @@
 #Don't put comments; they get removed
-<<<<<<< Updated upstream
-#Sun Aug 25 00:53:18 EDT 2024
-=======
-#Sat Aug 31 01:41:22 EDT 2024
->>>>>>> Stashed changes
+#Sat Aug 31 02:23:15 EDT 2024
 super-pickaxe-many-drop-items=true
 super-pickaxe-drop-items=true
 craftscript-dir=craftscripts
@@ -12,6 +8,7 @@ scripting-timeout=3000
 no-double-slash=false
 butcher-max-radius=-1
 profile=false
+<<<<<<<=Updated upstream
 max-radius=-1
 default-max-polyhedron-points=-1
 use-inventory-creative-override=false
@@ -22,6 +19,7 @@ log-format=[%1$tY-%1$tm-%1$td %1$tH\:%1$tM\:%1$tS %4$s]\: %5$s%6$s%n
 history-size=15
 register-help=true
 butcher-default-radius=-1
+>>>>>>>=Stashed changes
 schematic-save-dir=schematics
 nav-wand-item=345
 max-polygon-points=20
@@ -40,3 +38,4 @@ log-commands=false
 log-file=
 max-super-pickaxe-size=5
 nav-wand-distance=50
+=\=\=\=\=\=\=
