--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -119,11 +119,29 @@ world-1460707195 {
 }
 
 
+world-1487169978 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
 world-1519165611 {
     B:bookmarkOverlayEnabled=false
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@treasure 
+    B:overlayEnabled=true
+}
+
+
+world-153789330 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
@@ -385,6 +403,22 @@ world-414446154 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=@golem
+    B:overlayEnabled=true
+}
+
+
+world-427917884 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -687,17 +721,10 @@ world-992091067 {
 
 
 world-994211867 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -1095,17 +1122,10 @@ world1969693092 {
 
 
 world2032161 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=aerclou
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
