--- a/.minecraft/config/splash.properties
+++ b/.minecraft/config/splash.properties
@@ -1,21 +1,20 @@
 #Splash screen properties
-<<<<<<< Updated upstream
-#Sun Aug 25 00:52:39 EDT 2024
-=======
-#Sat Aug 31 01:40:32 EDT 2024
->>>>>>> Stashed changes
-background=0xFFFFFF
-memoryGood=0x78CB34
-font=0x0
+#Sat Aug 31 02:22:35 EDT 2024
+logoOffset=0
 barBackground=0xFFFFFF
-barBorder=0xC0C0C0
-memoryLow=0xE42F2F
-rotate=false
-memoryWarn=0xE6E84A
+memoryGood=0x78CB34
 showMemory=true
 enabled=true
+>>>>>>>=Stashed changes
+forgeTexture=fml\:textures/gui/forge.png
+<<<<<<<=Updated upstream
+font=0x0
+memoryLow=0xE42F2F
+memoryWarn=0xE6E84A
+rotate=false
+background=0xFFFFFF
 bar=0xCB3D35
 resourcePackPath=resources
-logoOffset=0
-forgeTexture=fml\:textures/gui/forge.png
+barBorder=0xC0C0C0
 fontTexture=textures/font/ascii.png
+=\=\=\=\=\=\=
